--- a/app/views/cab_models/new.html.erb
+++ b/app/views/cab_models/new.html.erb
@@ -1,7 +1,7 @@
-<h4>New Owner</h4>
+<h4>Cab Model - New</h4>
 
 <%= render 'form', cab_model: @cab_model %>
 
 <%= link_to cab_models_path, :class => 'badge badge-light' do %>
-    <%= fa_icon 'arrow-left' %> Retour
+    <%= fa_icon 'arrow-left' %> Go Back
 <% end %>
