--- a/app/views/cabs/new.html.erb
+++ b/app/views/cabs/new.html.erb
@@ -1,7 +1,7 @@
-<h4>New Cab</h4>
+<h4>Cab - New</h4>
 
 <%= render 'form', cab: @cab %>
 
 <%= link_to cabs_path, :class => 'badge badge-light' do %>
-    <%= fa_icon 'arrow-left' %> Retour
+    <%= fa_icon 'arrow-left' %> Go Back
 <% end %>
