--- a/app/views/damage_types/new.html.erb
+++ b/app/views/damage_types/new.html.erb
@@ -1,7 +1,7 @@
-<h4>New Damage Type</h4>
+<h4>Damage Type - New</h4>
 
 <%= render 'form', damage_type: @damage_type %>
 
 <%= link_to damage_types_path, :class => 'badge badge-light' do %>
-    <%= fa_icon 'arrow-left' %> Retour
+    <%= fa_icon 'arrow-left' %> Go Back
 <% end %>
