--- a/app/views/damage_types/show.html.erb
+++ b/app/views/damage_types/show.html.erb
@@ -1,4 +1,4 @@
-<h4><%= @damage_type.name %> - Detail</h4>
+<h4>Damage Type - Detail</h4>
 
 <table class="table table-bordered">
   <thead>
@@ -14,7 +14,7 @@
 </table>
 
 <%= link_to damage_types_path, :class => 'badge badge-light' do %>
-    <%= fa_icon 'arrow-left' %> Retour
+    <%= fa_icon 'arrow-left' %> Go Back
 <% end %>
 
 <%= link_to edit_damage_type_path(@damage_type), :class => 'badge badge-dark' do %>
