--- a/app/views/damages/new.html.erb
+++ b/app/views/damages/new.html.erb
@@ -1,7 +1,7 @@
-<h4>New Damage</h4>
+<h4>Damage - New</h4>
 
 <%= render 'form', damage: @damage %>
 
 <%= link_to damages_path, :class => 'badge badge-light' do %>
-    <%= fa_icon 'arrow-left' %> Retour
+    <%= fa_icon 'arrow-left' %> Go Back
 <% end %>
