--- a/app/views/damages/show.html.erb
+++ b/app/views/damages/show.html.erb
@@ -1,4 +1,4 @@
-<h4>Damage Detail</h4>
+<h4>Damage - Detail</h4>
 
 <table class="table table-bordered">
   <thead>
@@ -28,7 +28,7 @@
 </table>
 
 <%= link_to damages_path, :class => 'badge badge-light' do %>
-    <%= fa_icon 'arrow-left' %> Retour
+    <%= fa_icon 'arrow-left' %> Go Back
 <% end %>
 
 <%= link_to edit_damage_path(@damage), :class => 'badge badge-dark' do %>
