--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -113,7 +113,7 @@
 
 
     <div class="actions">
-      <%= f.submit 'Mettre à jours', class: 'btn btn-info' %>
+      <%= f.submit 'Mettre à days', class: 'btn btn-info' %>
     </div>
 
 <% end %>
@@ -125,7 +125,7 @@
     <%=
       button_to 'Suprimmer ce compte',
                 registration_path(resource_name),
-                data: { confirm: 'Êtes vous sur?' },
+                data: { confirm: 'Are Your Sur?' },
                 method: :delete ,
                 class: 'btn btn-outline-danger'
     %>
@@ -134,5 +134,5 @@
 
 
 <%= link_to :back, :class => 'badge badge-light' do %>
-    <%= fa_icon 'arrow-left' %> Retour
+    <%= fa_icon 'arrow-left' %> Go Back
 <% end %>
