--- a/app/views/expenses/sub-pages/_breaks.html.erb
+++ b/app/views/expenses/sub-pages/_breaks.html.erb
@@ -29,7 +29,7 @@
                       <%= b.break_cause.name %>
                   <% end %>
                 </td>
-                <td><%= (b.end_date - b.start_date).to_i %> jours</td>
+                <td><%= (b.end_date - b.start_date).to_i %> days</td>
                 <td><b><%= b.expense.amount %> DH</b></td>
               </tr>
           <% end %>
