--- a/app/views/fuel_types/show.html.erb
+++ b/app/views/fuel_types/show.html.erb
@@ -1,4 +1,4 @@
-<h4><%= @fuel_type.name %> - Detail</h4>
+<h4>Fuel Type - Detail</h4>
 
 <table class="table table-bordered">
   <thead>
@@ -14,7 +14,7 @@
 </table>
 
 <%= link_to fuel_types_path, :class => 'badge badge-light' do %>
-    <%= fa_icon 'arrow-left' %> Retour
+    <%= fa_icon 'arrow-left' %> Go Back
 <% end %>
 
 <%= link_to edit_fuel_type_path(@fuel_type), :class => 'badge badge-dark' do %>
