--- a/app/views/insurances/index.html.erb
+++ b/app/views/insurances/index.html.erb
@@ -1,4 +1,4 @@
-<h4>Assurances</h4>
+<h4>Insurances</h4>
 
 <!-- # -->
 <div class="actions row">
@@ -13,7 +13,7 @@
     <input type="search"
            class="form-control"
            id="search-insurance"
-           placeholder="Votre Recherche..." aria-label="Votre Recherche...">
+           placeholder="Your Text..." aria-label="Your Text...">
   </div>
 
 </div>
@@ -24,7 +24,7 @@
     <tr>
       <th>Insurer</th>
       <th>Insurance Document</th>
-      <th>Start Date</th>
+      <th>Starting Date</th>
       <th>Expiration</th>
       <th>Amount</th>
       <th class="td-actions">Actions</th>
