--- a/app/views/insurances/show.html.erb
+++ b/app/views/insurances/show.html.erb
@@ -1,10 +1,10 @@
-<h4>Insurance Detail</h4>
+<h4>Insurance - Detail</h4>
 
 <table class="table table-bordered">
   <thead>
   <tr>
     <th>Insurer</th>
-    <th>Start Date</th>
+    <th>Starting Date</th>
     <th>Expiration Date</th>
     <th>Amount</th>
   </tr>
@@ -20,7 +20,7 @@
 </table>
 
 <%= link_to insurances_path, :class => 'badge badge-light' do %>
-    <%= fa_icon 'arrow-left' %> Retour
+    <%= fa_icon 'arrow-left' %> Go Back
 <% end %>
 
 <%= link_to edit_insurance_path(@insurance), :class => 'badge badge-dark' do %>
