--- a/app/views/insurers/show.html.erb
+++ b/app/views/insurers/show.html.erb
@@ -1,4 +1,4 @@
-<h4><%= @insurer.name %> - Detail</h4>
+<h4>Insurer - Detail</h4>
 
 <table class="table table-bordered">
   <thead>
@@ -20,7 +20,7 @@
 </table>
 
 <%= link_to insurers_path, :class => 'badge badge-light' do %>
-    <%= fa_icon 'arrow-left' %> Retour
+    <%= fa_icon 'arrow-left' %> Go Back
 <% end %>
 
 <%= link_to edit_insurer_path(@insurer), :class => 'badge badge-dark' do %>
