--- a/app/views/owner_takes/new.html.erb
+++ b/app/views/owner_takes/new.html.erb
@@ -1,7 +1,7 @@
-<h4>New Owner Take</h4>
+<h4>Owner Take - New</h4>
 
 <%= render 'form', owner_take: @owner_take %>
 
 <%= link_to owner_takes_path, :class => 'badge badge-light' do %>
-    <%= fa_icon 'arrow-left' %> Retour
+    <%= fa_icon 'arrow-left' %> Go Back
 <% end %>
