--- a/app/views/owner_takes/show.html.erb
+++ b/app/views/owner_takes/show.html.erb
@@ -1,4 +1,4 @@
-<h4>Owner Take Detail</h4>
+<h4>Owner Take - Detail</h4>
 
 <table class="table table-bordered">
   <thead>
@@ -18,7 +18,7 @@
 </table>
 
 <%= link_to owner_takes_path, :class => 'badge badge-light' do %>
-    <%= fa_icon 'arrow-left' %> Retour
+    <%= fa_icon 'arrow-left' %> Go Back
 <% end %>
 
 <%= link_to edit_owner_take_path(@owner_take), :class => 'badge badge-dark' do %>
