--- a/app/views/owners/new.html.erb
+++ b/app/views/owners/new.html.erb
@@ -1,7 +1,7 @@
-<h4>New Owner</h4>
+<h4>Owner - New</h4>
 
 <%= render 'form', owner: @owner %>
 
 <%= link_to owners_path, :class => 'badge badge-light' do %>
-    <%= fa_icon 'arrow-left' %> Retour
+    <%= fa_icon 'arrow-left' %> Go Back
 <% end %>
