--- a/app/views/owners/show.html.erb
+++ b/app/views/owners/show.html.erb
@@ -1,4 +1,4 @@
-<h4><%= @owner.full_name %> - Detail</h4>
+<h4>Owner - Detail</h4>
 
 <table class="table table-bordered">
   <thead>
@@ -18,7 +18,7 @@
 </table>
 
 <%= link_to owners_path, :class => 'badge badge-light' do %>
-    <%= fa_icon 'arrow-left' %> Retour
+    <%= fa_icon 'arrow-left' %> Go Back
 <% end %>
 
 <%= link_to edit_owner_path(@owner), :class => 'badge badge-dark' do %>
