--- a/app/views/statistics/expenses/_damages_stats.html.erb
+++ b/app/views/statistics/expenses/_damages_stats.html.erb
@@ -4,7 +4,7 @@
 
       <!-- # Title -->
       <h4 class="card-title">
-        Dégats
+        Damage
         <b class="badge badge-info">
           <%= number_to_currency(Damage.damages_sum, unit: '', separator: ',', delimiter: '', precision: 1) %> DH
         </b>
