--- a/app/views/statistics/expenses/_owner_takes_stats.html.erb
+++ b/app/views/statistics/expenses/_owner_takes_stats.html.erb
@@ -4,7 +4,7 @@
 
       <!-- # Title -->
       <h4 class="card-title">
-        Recettes
+        Owner Takes
         <b class="badge badge-info">
           <%= number_to_currency(OwnerTake.owner_takes_sum, unit: '', separator: ',', delimiter: '', precision: 1) %> DH
         </b>
