--- a/app/views/statistics/incomes/_all_incomes_stats.html.erb
+++ b/app/views/statistics/incomes/_all_incomes_stats.html.erb
@@ -1,7 +1,7 @@
 <div class="card">
   <div class="card-body">
     <h4 class="card-title">
-      Revenu Global
+      Global Incomes
       <b class="badge badge-info">
         <%= number_to_currency(Income.incomes_sum, unit: '', separator: ',', delimiter: '', precision: 1) %> DH
       </b>
