--- a/app/views/break_causes/index.html.erb
+++ b/app/views/break_causes/index.html.erb
@@ -13,7 +13,7 @@
     <input type="search"
            class="form-control"
            id="search-break-cause"
-           placeholder="Votre Recherche..." aria-label="Votre Recherche...">
+           placeholder="Your Text..." aria-label="Your Text...">
   </div>
 
 </div>
