--- a/app/views/break_causes/new.html.erb
+++ b/app/views/break_causes/new.html.erb
@@ -1,7 +1,7 @@
-<h4>New</h4>
+<h4>Break Cause - New</h4>
 
 <%= render 'form', break_cause: @break_cause %>
 
 <%= link_to break_causes_path, :class => 'badge badge-light' do %>
-    <%= fa_icon 'arrow-left' %> Retour
+    <%= fa_icon 'arrow-left' %> Go Back
 <% end %>
