--- a/app/views/breaks/_form.html.erb
+++ b/app/views/breaks/_form.html.erb
@@ -2,7 +2,7 @@
 
 
     <div class="form-group row">
-      <%= form.label 'Cause de l\'arrêt', class: 'col-sm-2 col-form-label' %>
+      <%= form.label 'Damage Cause', class: 'col-sm-2 col-form-label' %>
       <div class="col-sm-10">
         <%= form.collection_select :break_cause_id, BreakCause.all, :id, :name, {
           :multiple => false,
@@ -15,7 +15,7 @@
     <%= form.fields_for :expense  do |expense_form| %>
 
         <div class="form-group row">
-          <%= expense_form.label 'Montant', class: 'col-sm-2 col-form-label' %>
+          <%= expense_form.label 'Amount', class: 'col-sm-2 col-form-label' %>
           <div class="col-sm-10">
             <div class="input-group">
               <%= expense_form.number_field :amount, class: 'form-control' %>
@@ -63,7 +63,7 @@
     </div>
 
     <div class="form-group row">
-      <%= form.label 'Date fin', class: 'col-sm-2 col-form-label' %>
+      <%= form.label 'Starting Date', class: 'col-sm-2 col-form-label' %>
       <div class="col-sm-10">
         <%= form.date_field :end_date, class: 'form-control' %>
 
