--- a/app/views/breaks/show.html.erb
+++ b/app/views/breaks/show.html.erb
@@ -1,10 +1,10 @@
-<h4>Break Detail</h4>
+<h4>Break - Detail</h4>
 
 <table class="table table-bordered">
   <thead>
   <tr>
     <th>Cause</th>
-    <th>Start Date</th>
+    <th>Starting Date</th>
     <th>End Date</th>
     <th>Delay</th>
     <th>Amount</th>
@@ -22,7 +22,7 @@
 </table>
 
 <%= link_to breaks_path, :class => 'badge badge-light' do %>
-    <%= fa_icon 'arrow-left' %> Retour
+    <%= fa_icon 'arrow-left' %> Go Back
 <% end %>
 
 <%= link_to edit_break_path(@break), :class => 'badge badge-dark' do %>
