--- a/app/views/cab_models/show.html.erb
+++ b/app/views/cab_models/show.html.erb
@@ -1,4 +1,4 @@
-<h4><%= @cab_model.name %> - Detail</h4>
+<h4>Cab Model - Detail</h4>
 
 <table class="table table-bordered">
   <thead>
@@ -26,7 +26,7 @@
 </table>
 
 <%= link_to cab_models_path, :class => 'badge badge-light' do %>
-    <%= fa_icon 'arrow-left' %> Retour
+    <%= fa_icon 'arrow-left' %> Go back
 <% end %>
 
 <%= link_to edit_cab_model_path(@cab_model), :class => 'badge badge-dark' do %>
