--- a/app/views/damage_types/index.html.erb
+++ b/app/views/damage_types/index.html.erb
@@ -1,4 +1,4 @@
-<h4>Damage Type</h4>
+<h4>Damage Types</h4>
 
 <!-- # -->
 <div class="actions row">
@@ -13,7 +13,7 @@
     <input type="search"
            class="form-control"
            id="search-damage-type"
-           placeholder="Votre Recherche..." aria-label="Votre Recherche...">
+           placeholder="Your Text..." aria-label="Your Text...">
   </div>
 
 </div>
