--- a/app/views/damages/_form.html.erb
+++ b/app/views/damages/_form.html.erb
@@ -5,34 +5,34 @@
       <div class="col-sm-10">
         <%= form.collection_select :damage_type_id, DamageType.group(:name), :id, :name, {
           :multiple => false,
-          :include_blank => 'Selectionner un dégât',
+          :include_blank => 'Select a Damage',
         },{ class: 'form-control' }
         %>
       </div>
     </div>
 
     <div class="form-group row">
-      <%= form.label 'Chauffeur Résponsable', class: 'col-sm-2 col-form-label' %>
+      <%= form.label 'Driver', class: 'col-sm-2 col-form-label' %>
       <div class="col-sm-10">
         <%= form.collection_select :driver_id, Driver.all, :id, :full_name, {
           :multiple => false,
-          :include_blank => 'Selectionner un chauffeur',
+          :include_blank => 'Select a Driver',
         },{ class: 'form-control' }
         %>
-        <small>Selectionner un chauffeur s'il est responsable du dégât</small>
+        <small>Driver Responsible of the damage</small>
       </div>
     </div>
 
     <%= form.fields_for :expense  do |expense_form| %>
 
         <div class="form-group row">
-          <%= expense_form.label 'Montant Total', class: 'col-sm-2 col-form-label' %>
+          <%= expense_form.label 'Amount', class: 'col-sm-2 col-form-label' %>
           <div class="col-sm-10">
             <div class="input-group">
               <%= expense_form.number_field :amount, class: 'form-control' %>
               <span class="input-group-addon">DH</span>
             </div>
-            <small>N'oublier pas d'inclure le montant de la main d'oeuvre dans le montant total</small>
+            <small>Don't forget to include the labor expense amount.</small>
 
             <% if !@damage.errors.messages[:'expense.amount'].empty?  %>
                 <ul>
