--- a/app/views/drivers/_form.html.erb
+++ b/app/views/drivers/_form.html.erb
@@ -97,7 +97,7 @@
     </div>
 
     <div class="form-group row">
-      <%= form.label 'Start Date', class: 'col-sm-2 col-form-label' %>
+      <%= form.label 'Starting Date', class: 'col-sm-2 col-form-label' %>
       <div class="col-sm-10">
         <%= form.date_field :start_date, class: 'form-control' %>
         <% if !@driver.errors.messages[:'start_date'].empty?  %>
