--- a/app/views/expenses/sub-pages/_insurances.html.erb
+++ b/app/views/expenses/sub-pages/_insurances.html.erb
@@ -16,7 +16,7 @@
           <thead>
           <tr>
             <th>Insurer</th>
-            <th>Start Date</th>
+            <th>Starting Date</th>
             <th>End Date</th>
             <th>Amount</th>
           </tr>
