--- a/app/views/fuel_types/edit.html.erb
+++ b/app/views/fuel_types/edit.html.erb
@@ -3,9 +3,9 @@
 <%= render 'form', fuel_type: @fuel_type %>
 
 <%= link_to fuel_types_path, :class => 'badge badge-light' do %>
-    <%= fa_icon 'arrow-left' %> Retour
+    <%= fa_icon 'arrow-left' %> Go Back
 <% end %>
 
 <%= link_to @fuel_type, :class => 'badge badge-light' do %>
-    <%= fa_icon 'eye' %> Consulter Detail
+    <%= fa_icon 'eye' %> Show Detail
 <% end %>
