--- a/app/views/insurances/edit.html.erb
+++ b/app/views/insurances/edit.html.erb
@@ -1,12 +1,12 @@
-<h4>Editer cette Insurance</h4>
+<h4>Insurance - Edit</h4>
 
 <%= render 'form', insurance: @insurance %>
 
 <%= link_to insurances_path, :class => 'badge badge-light' do %>
-    <%= fa_icon 'arrow-left' %> Retour
+    <%= fa_icon 'arrow-left' %> Go Back
 <% end %>
 
 <%= link_to @insurance, :class => 'badge badge-light' do %>
-    <%= fa_icon 'eye' %> Consulter Detail
+    <%= fa_icon 'eye' %> Show Detail
 <% end %>
 
