--- a/app/views/insurers/edit.html.erb
+++ b/app/views/insurers/edit.html.erb
@@ -3,9 +3,9 @@
 <%= render 'form', insurer: @insurer %>
 
 <%= link_to insurers_path, :class => 'badge badge-light' do %>
-    <%= fa_icon 'arrow-left' %> Retour
+    <%= fa_icon 'arrow-left' %> Go Back
 <% end %>
 
 <%= link_to @insurer, :class => 'badge badge-light' do %>
-    <%= fa_icon 'eye' %> Consulter Detail
+    <%= fa_icon 'eye' %> Show Detail
 <% end %>
