--- a/app/views/insurers/index.html.erb
+++ b/app/views/insurers/index.html.erb
@@ -13,7 +13,7 @@
     <input type="search"
            class="form-control"
            id="search-insurer"
-           placeholder="Votre Recherche..." aria-label="Votre Recherche...">
+           placeholder="Your Text..." aria-label="Your Text...">
   </div>
 
 </div>
