--- a/app/views/insurers/new.html.erb
+++ b/app/views/insurers/new.html.erb
@@ -1,7 +1,7 @@
-<h4>New Insurer</h4>
+<h4>Insurer - New</h4>
 
 <%= render 'form', insurer: @insurer %>
 
 <%= link_to insurers_path, :class => 'badge badge-light' do %>
-    <%= fa_icon 'arrow-left' %> Retour
+    <%= fa_icon 'arrow-left' %> Go Back
 <% end %>
