--- a/app/views/manager_takes/show.html.erb
+++ b/app/views/manager_takes/show.html.erb
@@ -1,4 +1,4 @@
-<h4>Manager Take Detail</h4>
+<h4>Manager Take - Detail</h4>
 
 <table class="table table-bordered">
   <thead>
@@ -18,7 +18,7 @@
 </table>
 
 <%= link_to manager_takes_path, :class => 'badge badge-light' do %>
-    <%= fa_icon 'arrow-left' %> Retour
+    <%= fa_icon 'arrow-left' %> Go Back
 <% end %>
 
 <%= link_to edit_manager_take_path(@manager_take), :class => 'badge badge-dark' do %>
