--- a/app/views/owners/edit.html.erb
+++ b/app/views/owners/edit.html.erb
@@ -1,11 +1,11 @@
-<h4>Editer ce Propriétaire</h4>
+<h4>Owner - Edit</h4>
 
 <%= render 'form', owner: @owner %>
 
 <%= link_to owners_path, :class => 'badge badge-light' do %>
-    <%= fa_icon 'arrow-left' %> Retour
+    <%= fa_icon 'arrow-left' %> Go Back
 <% end %>
 
 <%= link_to @owner, :class => 'badge badge-light' do %>
-    <%= fa_icon 'eye' %> Consulter Detail
+    <%= fa_icon 'eye' %> Show Detail
 <% end %>
