--- a/app/views/statistics/expenses/_all_expenses_stats.html.erb
+++ b/app/views/statistics/expenses/_all_expenses_stats.html.erb
@@ -1,7 +1,7 @@
 <div class="card">
   <div class="card-body">
     <h4 class="card-title">
-      Dépenses Générales
+      Global Expenses
       <b class="badge badge-info">
         <%= number_to_currency(Expense.expenses_sum, unit: '', separator: ',', delimiter: '', precision: 1) %> DH
       </b>
@@ -11,7 +11,7 @@
     <canvas id="AllExpenses">
       <!-- # Values-->
       <div id="expenses-breaks-stats"><%= calculat_percent(Break.breaks_sum, Expense.expenses_sum) %></div>
-      <div id="expenses-assurances-stats"><%= calculat_percent(Insurance.insurances_sum, Expense.expenses_sum) %></div>
+      <div id="expenses-insurances-stats"><%= calculat_percent(Insurance.insurances_sum, Expense.expenses_sum) %></div>
       <div id="expenses-damages-stats"><%= calculat_percent(Damage.damages_sum, Expense.expenses_sum) %></div>
       <div id="expenses-ownertakes-stats"><%= calculat_percent(OwnerTake.owner_takes_sum, Expense.expenses_sum) %></div>
     </canvas>
