--- a/app/views/statistics/expenses/_breaks_stats.html.erb
+++ b/app/views/statistics/expenses/_breaks_stats.html.erb
@@ -4,7 +4,7 @@
 
       <!-- # Title -->
       <h4 class="card-title">
-        Arrêts
+        Break
         <b class="badge badge-info">
           <%= number_to_currency(Break.breaks_sum, unit: '', separator: ',', delimiter: '', precision: 1) %> DH
         </b>
