--- a/app/views/cab_models/_form.html.erb
+++ b/app/views/cab_models/_form.html.erb
@@ -117,7 +117,7 @@
     </div>
 
     <div class="actions">
-      <%= form.submit 'Sauvegarder', :class => 'btn btn-info' %>
+      <%= form.submit 'Save', :class => 'btn btn-info' %>
     </div>
 
 <% end %>
