--- a/app/views/damage_types/_form.html.erb
+++ b/app/views/damage_types/_form.html.erb
@@ -17,7 +17,7 @@
     </div>
 
     <div class="actions">
-      <%= form.submit 'Sauvegarder', :class => 'btn btn-info' %>
+      <%= form.submit 'Save', :class => 'btn btn-info' %>
     </div>
 
 <% end %>
