--- a/app/views/insurers/index.html.erb
+++ b/app/views/insurers/index.html.erb
@@ -13,7 +13,7 @@
     <input type="search"
            class="form-control"
            id="search-insurer"
-           placeholder="Votre Recherche..." aria-label="Votre Recherche...">
+           placeholder="Your Text..." aria-label="Your Text...">
   </div>
 
 </div>
@@ -22,8 +22,8 @@
 <table id="insurer-data" class="table table-bordered">
   <thead>
   <tr>
-    <th>Name</th>
     <th>Picture</th>
+    <th>Name</th>
     <th>Address</th>
     <th>Phone</th>
     <th class="td-actions">Actions</th>
@@ -33,8 +33,8 @@
   <tbody>
   <% @insurers.each do |insurer| %>
       <tr>
+        <td><%= insurer.picture.file ? image_tag(insurer.picture, width: 100, height: 100) : 'No Picture' %></td>
         <td><%= insurer.name %></td>
-        <td><%= insurer.picture %></td>
         <td><%= insurer.address %></td>
         <td>0<%= insurer.phone %></td>
         <td>
