--- a/app/views/insurers/show.html.erb
+++ b/app/views/insurers/show.html.erb
@@ -3,16 +3,16 @@
 <table class="table table-bordered">
   <thead>
   <tr>
-    <th>Name</th>
     <th>Picture</th>
+    <th>Name</th>
     <th>Address</th>
     <th>Phone</th>
   </tr>
   </thead>
   <tbody>
   <tr>
+    <td><%= @insurer.picture.file ? image_tag(@insurer.picture, width: 100, height: 100) : 'No Picture' %></td>
     <td><%= @insurer.name %></td>
-    <td><%= @insurer.picture %></td>
     <td><%= @insurer.address %></td>
     <td><%= @insurer.phone %></td>
   </tr>
