Correct Update Manager Profile Route

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -113,7 +113,7 @@
 
 
     <div class="actions">
-      <%= f.submit 'Mettre à days', class: 'btn btn-info' %>
+      <%= f.submit 'Update', class: 'btn btn-info' %>
     </div>
 
 <% end %>
