--- a/app/views/layouts/_notices.html.erb
+++ b/app/views/layouts/_notices.html.erb
@@ -1,3 +1,10 @@
 <% if notice %>
-    <div class="alert alert-success" role="alert"><%= notice %></div>
+    <div class="notice">
+      <div class="alert alert-success alert-dismissible fade show" role="alert">
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+        <%= notice %>
+      </div>
+    </div>
 <% end %>
